# chatbot_app

./: chat_app.py  config.py  db.py  ingest.py  main.py  pyproject.toml
data/: handbook.txt
faiss_index/: index.faiss  index.pkl
